--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mongoose": "^6.7.2",
     "movier": "^2.1.8",
     "name-to-imdb": "^3.0.3"
   }
